# nb2slurm

./: .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: hpc-for-beginners.md  setup_notebooks.ipynb  walkthrough.ipynb
docs/control/: 0_config.ipynb  1_build.ipynb  2_submit.ipynb  3_sync.ipynb
docs/example_monte_carlo_pi/: README.md  analyse_subsets.ipynb  environment.yml  jobs.json  monte_carlo2slurm.ipynb
docs/example_monte_carlo_pi/done/: done.csv
docs/example_monte_carlo_pi/notebooks/: 0_settings.ipynb  1_simulate.ipynb  2_plot.ipynb
docs/example_monte_carlo_pi/output/1000/1/: 0_settings_executed.ipynb  1000_1.out  1_simulate_executed.ipynb  2_plot_executed.ipynb  points.json  result.json  settings.json
docs/example_monte_carlo_pi/output/1000/2/: 0_settings_executed.ipynb  1000_2.out  1_simulate_executed.ipynb  2_plot_executed.ipynb  points.json  result.json  settings.json
docs/example_monte_carlo_pi/output/1000/3/: 0_settings_executed.ipynb  1000_3.out  1_simulate_executed.ipynb  2_plot_executed.ipynb  points.json  result.json  settings.json
docs/example_monte_carlo_pi/output/1000000/1/: 0_settings_executed.ipynb  1000000_1.out  1_simulate_executed.ipynb  2_plot_executed.ipynb  result.json  settings.json
docs/example_monte_carlo_pi/output/1000000/2/: 0_settings_executed.ipynb  1000000_2.out  1_simulate_executed.ipynb  2_plot_executed.ipynb  result.json  settings.json
docs/example_monte_carlo_pi/output/1000000/3/: 0_settings_executed.ipynb  1000000_3.out  1_simulate_executed.ipynb  2_plot_executed.ipynb  result.json  settings.json
docs/example_monte_carlo_pi/scripts/: cancel_jobs.sh  job.slurm  jobs.txt  montecarlo.py  run_workflow.py  structure.json  submit_batch.sh  submit_jobs.sh
src/nb2slurm/: __init__.py  config.py  done.py  environment.py  render.py  runtime.py  settings.py  ssh.py  structure.py  workflow.py
src/nb2slurm/templates/: cancel_jobs.sh.j2  job.slurm.j2  run_workflow.py.j2  submit_batch.sh.j2  submit_jobs.sh.j2
tests/: test_workflow.py
