[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nb2slurm"
version = "0.1.0"
description = "Seamlessly scale a single-subject notebook workflow to many subjects on a SLURM HPC, driven entirely from notebooks."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Mark Melotto" }]
keywords = ["slurm", "papermill", "jupyter", "hpc", "workflow", "reproducibility"]

dependencies = [
    "papermill>=2.4",
    "filelock>=3.0",
    "jinja2>=3.0",
    "paramiko>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/eWaterCycle/nb2slurm"

[tool.hatch.build.targets.wheel]
packages = ["src/nb2slurm"]

[tool.hatch.build.targets.wheel.force-include]
"src/nb2slurm/templates" = "nb2slurm/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
