[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nb2slurm"
dynamic = ["version"]
description = "Seamlessly scale a single-subject notebook workflow to many subjects on a SLURM HPC, driven entirely from notebooks."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Mark Melotto" }]
keywords = ["slurm", "papermill", "jupyter", "hpc", "workflow", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "papermill>=2.4",
    "filelock>=3.0",
    "jinja2>=3.0",
    "paramiko>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/eWaterCycle/nb2slurm"

[tool.hatch.version]
path = "src/nb2slurm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nb2slurm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
